--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: 321Backup
 Theme URI: 321Backup.co.uk
 Author: Omari Grant
-Author URI: http://ogrant.co.uk
+Author URI: http://ogrant.co.uk or https://github.com/OmariGrant
 Description: 321Backup.co.uk
 Version: 1.0
 Text Domain: 321Backup
